WIP: fix overflow-x

--- a/client/src/components/Sidebar/GoalCard.module.css
+++ b/client/src/components/Sidebar/GoalCard.module.css
@@ -8,9 +8,7 @@
   cursor: pointer;
   display: flex;
   flex-direction: column;
-  max-width: 100%;
   width: 100%;
-  min-width: 220px;
   box-sizing: border-box;
   overflow: hidden;
 }
